// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate (--rule-list-split) as a function generates the documentation 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

❌ Deprecated.

| Name                           | ❌  |
| :----------------------------- | :- |
| [no-biz](docs/rules/no-biz.md) |    |

### Not Deprecated

| Name                           | ❌  |
| :----------------------------- | :- |
| [no-bar](docs/rules/no-bar.md) |    |
| [no-baz](docs/rules/no-baz.md) |    |
| [no-biz](docs/rules/no-biz.md) |    |

### Deprecated

| Name                           | ❌  |
| :----------------------------- | :- |
| [no-foo](docs/rules/no-foo.md) | ❌  |

### Name = "no-baz"

| Name                           | ❌  |
| :----------------------------- | :- |
| [no-baz](docs/rules/no-baz.md) |    |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (--rule-list-split) by nested property meta.docs.category splits the list 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

| Name                           |
| :----------------------------- |
| [no-baz](docs/rules/no-baz.md) |

### candy

| Name                           |
| :----------------------------- |
| [no-bar](docs/rules/no-bar.md) |

### fruits

| Name                           |
| :----------------------------- |
| [no-foo](docs/rules/no-foo.md) |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (--rule-list-split) by type splits the list 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

| Name                           |
| :----------------------------- |
| [no-biz](docs/rules/no-biz.md) |

### problem

| Name                           |
| :----------------------------- |
| [no-foo](docs/rules/no-foo.md) |

### suggestion

| Name                           |
| :----------------------------- |
| [no-bar](docs/rules/no-bar.md) |
| [no-baz](docs/rules/no-baz.md) |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (--rule-list-split) ignores case when sorting headers splits the list 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

### a

| Name                           |
| :----------------------------- |
| [no-bar](docs/rules/no-bar.md) |

### B

| Name                           |
| :----------------------------- |
| [no-baz](docs/rules/no-baz.md) |

### c

| Name                           |
| :----------------------------- |
| [no-foo](docs/rules/no-foo.md) |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (--rule-list-split) multiple properties and no rules left for second property (already shown for first property) does not show the property with no rules left and does not throw 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

❌ Deprecated.

### Deprecated

| Name                           | ❌  |
| :----------------------------- | :- |
| [no-bar](docs/rules/no-bar.md) | ❌  |
| [no-foo](docs/rules/no-foo.md) | ❌  |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (--rule-list-split) multiple properties splits the list by multiple properties 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

❌ Deprecated.

### Hello

| Name                           | ❌  |
| :----------------------------- | :- |
| [no-foo](docs/rules/no-foo.md) |    |

### World

| Name                           | ❌  |
| :----------------------------- | :- |
| [no-biz](docs/rules/no-biz.md) |    |

### Deprecated

| Name                           | ❌  |
| :----------------------------- | :- |
| [no-bar](docs/rules/no-bar.md) | ❌  |
| [no-baz](docs/rules/no-baz.md) | ❌  |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (--rule-list-split) with boolean (CONSTANT_CASE) splits the list with the right header 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

| Name                           |
| :----------------------------- |
| [no-bar](docs/rules/no-bar.md) |
| [no-baz](docs/rules/no-baz.md) |

### Hello World

| Name                           |
| :----------------------------- |
| [no-foo](docs/rules/no-foo.md) |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (--rule-list-split) with boolean (PascalCase) splits the list with the right header 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

| Name                           |
| :----------------------------- |
| [no-bar](docs/rules/no-bar.md) |
| [no-baz](docs/rules/no-baz.md) |

### Hello World

| Name                           |
| :----------------------------- |
| [no-foo](docs/rules/no-foo.md) |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (--rule-list-split) with boolean (camelCase) splits the list with the right header 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

💡 Manually fixable by [editor suggestions](https://eslint.org/docs/developer-guide/working-with-rules#providing-suggestions).

| Name                           | 💡 |
| :----------------------------- | :- |
| [no-bar](docs/rules/no-bar.md) |    |
| [no-baz](docs/rules/no-baz.md) |    |

### Has Suggestions

| Name                           | 💡 |
| :----------------------------- | :- |
| [no-foo](docs/rules/no-foo.md) | 💡 |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (--rule-list-split) with boolean (snake_case) splits the list with the right header 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

| Name                           |
| :----------------------------- |
| [no-bar](docs/rules/no-bar.md) |
| [no-baz](docs/rules/no-baz.md) |

### Hello World

| Name                           |
| :----------------------------- |
| [no-foo](docs/rules/no-foo.md) |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (--rule-list-split) with boolean (unknown variable type) splits the list and does the best it can with the header 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

| Name                           |
| :----------------------------- |
| [no-foo](docs/rules/no-foo.md) |

### Foo Bar Biz Baz3b Oz

| Name                           |
| :----------------------------- |
| [no-bar](docs/rules/no-bar.md) |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (--rule-list-split) with boolean (various boolean equivalent values) splits the list 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

| Name                                         |
| :------------------------------------------- |
| [no](docs/rules/no.md)                       |
| [noEmptyString](docs/rules/noEmptyString.md) |
| [noFalse](docs/rules/noFalse.md)             |
| [noFalseString](docs/rules/noFalseString.md) |
| [noNo](docs/rules/noNo.md)                   |
| [noNull](docs/rules/noNull.md)               |
| [noOff](docs/rules/noOff.md)                 |
| [noUndefined](docs/rules/noUndefined.md)     |

### Foo

| Name                                       |
| :----------------------------------------- |
| [noOn](docs/rules/noOn.md)                 |
| [noTrue](docs/rules/noTrue.md)             |
| [noTrueString](docs/rules/noTrueString.md) |
| [noYes](docs/rules/noYes.md)               |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (--rule-list-split) with no existing headers in file uses the proper sub-list header level 1`] = `
"<!-- begin auto-generated rules list -->

| Name                           |
| :----------------------------- |
| [no-baz](docs/rules/no-baz.md) |

# candy

| Name                           |
| :----------------------------- |
| [no-bar](docs/rules/no-bar.md) |

# fruits

| Name                           |
| :----------------------------- |
| [no-foo](docs/rules/no-foo.md) |

<!-- end auto-generated rules list -->"
`;

exports[`generate (--rule-list-split) with one sub-list having no rules enabled by the config splits the list and still uses recommended config emoji in both lists 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
✅ Set in the \`recommended\` configuration.

### bar

| Name                           | 💼 |
| :----------------------------- | :- |
| [no-bar](docs/rules/no-bar.md) |    |

### foo

| Name                           | 💼 |
| :----------------------------- | :- |
| [no-foo](docs/rules/no-foo.md) | ✅  |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (--rule-list-split) with only a title in the rules file uses the proper sub-list header level 1`] = `
"# Rules
<!-- begin auto-generated rules list -->

| Name                           |
| :----------------------------- |
| [no-baz](docs/rules/no-baz.md) |

## candy

| Name                           |
| :----------------------------- |
| [no-bar](docs/rules/no-bar.md) |

## fruits

| Name                           |
| :----------------------------- |
| [no-foo](docs/rules/no-foo.md) |

<!-- end auto-generated rules list -->"
`;
